[package]
name = "prediction-matcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matcher"
path = "src/bin/matcher.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
