[package]
name = "prediction-matcher"
version = "0.1.0"
edition = "2021"
default-run = "prediction-matcher"

[[bin]]
name = "matcher"
path = "src/bin/matcher.rs"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["json", "ws"] }
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
